chore: clean up

--- a/src/index.html
+++ b/src/index.html
@@ -50,11 +50,13 @@
   <meta property="twitter:creator" content="@rubenabix">
 
   <!-- Favicon & Web Manifest -->
-  <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg">
-  <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-  <link rel="manifest" href="/assets/favicon/site.webmanifest">
+  <link rel="icon" type="image/png" href="https://tinyimage.rubenabix.com/assets/favicon/favicon-96x96.png"
+    sizes="96x96">
+  <link rel="icon" type="image/svg+xml" href="https://tinyimage.rubenabix.com/assets/favicon/favicon.svg">
+  <link rel="shortcut icon" href="https://tinyimage.rubenabix.com/assets/favicon/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180"
+    href="https://tinyimage.rubenabix.com/assets/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="https://tinyimage.rubenabix.com/assets/favicon/site.webmanifest">
 
   <!-- Preconnect for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
